[workspace]
members = [
	"bin/node-template/node",
	"bin/node-template/runtime",
	"client/cli",
	"frame/balances",
	"frame/balances/rpc",
	"frame/balances/rpc/runtime-api",
	"frame/claims",
	"frame/bridge/eth/backing",
	"frame/bridge/eth/relay",
	"frame/bridge/eth/offchain",
	"frame/bridge/relayer-game",
	"frame/elections-phragmen",
	"frame/header-mmr",
	"frame/staking",
	"frame/staking/rpc",
	"frame/staking/rpc/runtime-api",
	"frame/support",
	"frame/treasury",
	"primitives/array-bytes",
	"primitives/eth-primitives",
	"primitives/merkle-patricia-trie",
]

[profile.release]
panic = "unwind"
