[workspace]
members = [
	"bin/node-template/node",
	"bin/node-template/runtime",
	"client/cli",
	"frame/balances",
	"frame/balances/rpc",
	"frame/balances/rpc/runtime-api",
	"frame/claims",
	"frame/bridge/ethereum/backing",
	"frame/bridge/ethereum/linear-relay",
	"frame/bridge/ethereum/relay",
	"frame/bridge/ethereum/offchain",
	"frame/bridge/relayer-game",
	"frame/elections-phragmen",
	"frame/header-mmr",
	"frame/header-mmr/rpc",
	"frame/header-mmr/rpc/runtime-api",
	"frame/staking",
	"frame/staking/rpc",
	"frame/staking/rpc/runtime-api",
	"frame/support",
	"frame/treasury",
	"primitives/array-bytes",
	"primitives/ethereum-primitives",
	"primitives/merkle-patricia-trie",
]

[profile.release]
panic = "unwind"
