[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia CLI interface."
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "darwinia-cli"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.4.0"

[dependencies]
# crates
serde = { version = "1.0.126", features = ["derive"] }
toml  = { version = "0.5.7" }
# substrate
sc-cli        = { git = "https://github.com/darwinia-network/substrate.git", branch = "s2s" }
sc-client-api = { git = "https://github.com/darwinia-network/substrate.git", branch = "s2s" }
sc-service    = { git = "https://github.com/darwinia-network/substrate.git", branch = "s2s" }
sc-tracing    = { git = "https://github.com/darwinia-network/substrate.git", branch = "s2s" }
