[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia CLI interface."
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "darwinia-cli"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.6.0"

[dependencies]
# crates.io
serde = { version = "1.0.127", features = ["derive"] }
toml  = { version = "0.5.7" }
# paritytech
sc-cli        = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-client-api = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-service    = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sc-tracing    = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
