[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet to manage balances"
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "darwinia-balances"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.6.10"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "2.1", default-features = false }
log   = { version = "0.4" }
# darwinia-network
darwinia-balances-rpc-runtime-api = { default-features = false, path = "./rpc/runtime-api" }
darwinia-support                  = { default-features = false, path = "../support" }
# paritytech
frame-support   = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6" }
frame-system    = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6" }
max-encoded-len = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6" }
sp-runtime      = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6" }
sp-std          = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6" }

[dev-dependencies]
# paritytech
max-encoded-len            = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6" }
pallet-transaction-payment = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6" }
sp-core                    = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6" }
sp-io                      = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	# darwinia-network
	"darwinia-balances-rpc-runtime-api/std",
	"darwinia-support/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"max-encoded-len/std",
	"sp-runtime/std",
	"sp-std/std",
]

try-runtime = [
	"frame-support/try-runtime",
]
