[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet to manage balances"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-balances"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.7.2"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "2.2", default-features = false }
log        = { version = "0.4" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
# darwinia-network
darwinia-balances-rpc-runtime-api = { default-features = false, path = "./rpc/runtime-api" }
darwinia-support                  = { default-features = false, path = "../support" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }

[dev-dependencies]
# paritytech
pallet-transaction-payment = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-core                    = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-io                      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	# darwinia-network
	"darwinia-balances-rpc-runtime-api/std",
	"darwinia-support/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]

try-runtime = [
	"frame-support/try-runtime",
]
