[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet to manage balances"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-balances"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.10.1"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "2.3", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.5" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.5" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.5" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.5" }

[dev-dependencies]
# paritytech
pallet-transaction-payment = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.5" }
sp-core                    = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.5" }
sp-io                      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.5" }
# darwinia-network
darwinia-support = { features = ["testing"], path = "../support" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]

try-runtime = [
	"frame-support/try-runtime",
]
