[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia BEEFY Customization."
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-beefy-gadget"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.9"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "2.3", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
# darwinia-network
darwinia-beefy-primitives = { path = "../../primitives/beefy" }
darwinia-ethereum         = { default-features = false, path = "../dvm/ethereum" }
dp-contract               = { default-features = false, path = "../../primitives/contract" }
# paritytech
beefy-primitives = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
frame-support    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
frame-system     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
pallet-beefy     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
pallet-beefy-mmr = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
pallet-mmr       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-core          = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-io            = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-runtime       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-std           = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

[dev-dependencies]
array-bytes = { version = "1.4" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	# darwinia-network
	"darwinia-ethereum/std",
	"dp-contract/std",
	# paritytech
	"beefy-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-beefy/std",
	"pallet-beefy-mmr/std",
	"pallet-mmr/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
