[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME to claim airdrop"
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "darwinia-claims"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.6.6"

[dependencies]
# crates.io
array-bytes = { version = "1.3.3" }
codec       = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
log         = { version = "0.4.14" }
serde       = { version = "1.0.127", optional = true }
serde_json  = { version = "1.0.66", optional = true }
# darwinia-network
darwinia-support = { default-features = false, path = "../support" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
sp-io         = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }

[dev-dependencies]
# crates.io
libsecp256k1 = { version = "0.3.5" }
# darwinia-network
darwinia-balances = { path = "../balances" }
# paritytech
max-encoded-len = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
sp-core         = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"serde",
	"serde_json",
	# darwinia-network
	"darwinia-support/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
