[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME to claim airdrop"
edition     = "2021"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "darwinia-claims"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.6.10"

[dependencies]
# crates.io
array-bytes = { version = "1.4" }
codec       = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
log         = { version = "0.4" }
serde       = { version = "1.0", optional = true }
serde_json  = { version = "1.0", optional = true }
# darwinia-network
darwinia-support = { default-features = false, path = "../support" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-io         = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }

[dev-dependencies]
# crates.io
libsecp256k1 = { version = "0.3" }
# darwinia-network
darwinia-balances = { path = "../balances" }
# paritytech
max-encoded-len = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-core         = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"serde",
	"serde_json",
	# darwinia-network
	"darwinia-support/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
