[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME to claim airdrop"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-claims"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.3"

[dependencies]
# crates.io
array-bytes = { version = "1.4" }
codec       = { package = "parity-scale-codec", version = "2.2", default-features = false, features = ["derive"] }
log         = { version = "0.4" }
scale-info  = { version = "1.0", default-features = false, features = ["derive"] }
serde       = { version = "1.0", optional = true }
serde_json  = { version = "1.0", optional = true }
# darwinia-network
darwinia-support = { default-features = false, path = "../support" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-io         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }

[dev-dependencies]
# crates.io
libsecp256k1 = { version = "0.3" }
# darwinia-network
darwinia-balances = { path = "../balances" }
# paritytech
sp-core = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	"serde",
	"serde_json",
	# darwinia-network
	"darwinia-support/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
