[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet for democracy"
edition     = "2021"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "darwinia-democracy"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.7.1"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
# darwinia-network
darwinia-support = { default-features = false, path = "../support" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-io         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }

[dev-dependencies]
# crates.io
hex-literal = { version = "0.3" }
# darwinia-network
darwinia-balances = { path = "../balances" }
darwinia-support  = { features = ["easy-testing"], path = "../support" }
# paritytech
pallet-scheduler     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-core              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
sp-storage           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }
substrate-test-utils = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.8" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"serde",
	# darwinia-network
	"darwinia-support/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
