[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet for democracy"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-democracy"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.8"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde      = { version = "1.0", optional = true, features = ["derive"] }
# darwinia-network
darwinia-support = { default-features = false, path = "../support" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-io         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }

[dev-dependencies]
# crates.io
hex-literal = { version = "0.3" }
# darwinia-network
darwinia-balances = { path = "../balances" }
darwinia-support  = { features = ["easy-testing"], path = "../support" }
# paritytech
pallet-scheduler     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-core              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-storage           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
substrate-test-utils = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	"serde",
	# darwinia-network
	"darwinia-support/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
