[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Dynamic fee handling for EVM."
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "dvm-dynamic-fee"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.6.2"


[dependencies]
# crates.io
async-trait = { version = "0.1.42" }
codec       = { package = "parity-scale-codec", version = "2.1.1", default-features = false }
# darwinia-network
darwinia-evm = { default-features = false, path = "../evm" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-inherents  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	# darwinia-network
	"darwinia-evm/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
]
