[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Dynamic fee handling for EVM."
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "dvm-dynamic-fee"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.6.6"


[dependencies]
# crates.io
async-trait = { version = "0.1" }
codec       = { package = "parity-scale-codec", version = "2.1", default-features = false }
# darwinia-network
darwinia-evm = { default-features = false, path = "../evm" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-inherents  = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }

[dev-dependencies]
pallet-timestamp = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-io            = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	# darwinia-network
	"darwinia-evm/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
]
