[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Dynamic fee handling for EVM."
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "dvm-dynamic-fee"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.7.2"


[dependencies]
# crates.io
async-trait = { version = "0.1" }
codec       = { package = "parity-scale-codec", version = "2.2", default-features = false }
scale-info  = { version = "1.0", default-features = false, features = ["derive"] }
# darwinia-network
darwinia-evm = { default-features = false, path = "../evm" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-inherents  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }

[dev-dependencies]
pallet-timestamp = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-io            = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	# darwinia-network
	"darwinia-evm/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
]
